styling- tablet screen with correct image size and content spacing

--- a/components/description/Description.module.css
+++ b/components/description/Description.module.css
@@ -12,6 +12,7 @@
   .main {
     display: flex;
     text-align: left;
+    margin-bottom: 32px;
   }
 }
 
