--- a/components/topBar/TopBar.module.css
+++ b/components/topBar/TopBar.module.css
@@ -114,7 +114,7 @@
   }
 
   .mobileFooter {
-    margin-bottom: 146px;
+    margin-bottom: 3px;
   }
 }
 
