--- a/pages/planets/PlanetPage.module.css
+++ b/pages/planets/PlanetPage.module.css
@@ -72,7 +72,7 @@
 
   .tabletCenter {
     display: flex;
-    padding: 0 24px;
+    padding: 0 40px;
   }
 
   .bannerAndDescription {
@@ -84,17 +84,20 @@
   .planetImg {
     display: flex;
     justify-content: center;
-    margin-bottom: 130px;
+    min-height: 460px;
+    /* margin-bottom: 130px; */
   }
 
   .middleSection {
-    margin-bottom: 27px;
+    /* margin-bottom: 27px; */
+    margin: 0;
   }
   .pageTabs {
     display: flex;
     align-items: center;
     justify-content: right;
     width: 100%;
+    max-width: 280px;
   }
   .bannerAndContent {
     display: flex;
@@ -108,15 +111,10 @@
     justify-content: left;
   }
 
-  .pageTabs {
-    margin-bottom: 3rem;
-    max-width: 280px;
-  }
-
   .infoTabs {
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 24px 36px 24px;
+    padding: 0 40px 36px;
   }
 }
 
